[project]
name = "cw-nano-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chipwhisperer>=6.0.0",
    "holoviews>=1.22.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter-bokeh>=4.0.5",
    "logic2-automation>=1.0.7",
    "nbformat>=5.10.4",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
]
